<resources>
    <string name="app_name">Wave Apps</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="description_image">This is a Image</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="date_textView">Date</string>
    <string name="amount_text_view">Amount</string>
    <string name="title_text_view">Title</string>
    <string name="description_text_view">Description</string>
    <string name="type_text_view">Type</string>
    <string name="category_text_view">Category</string>
    <string name="photo_text_view">Photo</string>

    <string name="title_activity_splash_screen">SplashScreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_holo">holoActivity</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="section_format">Hello World from section: %1$d</string>
</resources>
