<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:card_view="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    card_view:elevation="@dimen/cardview_default_elevation"
    app:cardCornerRadius="@dimen/cardview_default_radius"
    android:id="@+id/transactionCardView"
    android:layout_margin="5dp"
    android:padding="10dp"
    app:contentPadding="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/transactionContentLinearLayout"
        android:baselineAligned="false">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:id="@+id/descriptionLinearLayout"
            android:gravity="center">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/descriptionTextView"
                card_view:text="@string/description_text_view"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_marginBottom="5dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/dateTextView"
                card_view:text="@string/date_textView" />
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:id="@+id/amountLinearLayout"
            android:layout_gravity="center"
            card_view:layout_gravity="center_vertical|center_horizontal"
            android:gravity="center">

            <TextView
                android:text="@string/amount_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/amountTextView"
                android:textStyle="bold"
                android:textSize="18sp"
                android:textAlignment="center" />
        </LinearLayout>
    </LinearLayout>

</android.support.v7.widget.CardView>

